# flac-idf

./: .gitmodules  CMakeLists.txt  README.md
test/: getTestWav.sh  sd_card_example_main.c
